# serializer version: 1
# name: test_config_entry_diagnostics
  dict({
    'connection': dict({
      'circuit_breaker_open': False,
      'connected_for': 0.0,
      'dead_reason': None,
      'download_node_db': False,
      'host': '**REDACTED**',
      'missed_heartbeats': 0,
      'pending_requests': 0,
      'port': 4403,
      'reboot_grace_active': False,
      'reconnect_attempts': 1,
      'short_connections': 0,
      'state': 'connected',
    }),
    'entry': dict({
      'data': dict({
        'download_node_db': False,
        'fixed_position': dict({
          'latitude': '**REDACTED**',
          'latitudeI': '**REDACTED**',
          'latitude_i': '**REDACTED**',
          'longitude': '**REDACTED**',
          'longitudeI': '**REDACTED**',
          'longitude_i': '**REDACTED**',
        }),
        'host': '**REDACTED**',
        'node_config': dict({
          'adminKey': '**REDACTED**',
          'adminKeys': '**REDACTED**',
          'admin_key': '**REDACTED**',
          'admin_keys': '**REDACTED**',
          'host': '**REDACTED**',
          'password': '**REDACTED**',
          'privateKey': '**REDACTED**',
          'private_key': '**REDACTED**',
          'psk': '**REDACTED**',
          'publicKey': '**REDACTED**',
          'public_key': '**REDACTED**',
          'sessionPasskey': '**REDACTED**',
          'session_passkey': '**REDACTED**',
          'wifiPsk': '**REDACTED**',
          'wifiSsid': '**REDACTED**',
          'wifi_psk': '**REDACTED**',
          'wifi_ssid': '**REDACTED**',
        }),
        'port': 4403,
      }),
      'minor_version': 2,
      'options': dict({
      }),
      'source': 'user',
      'title': 'HA Gateway',
      'unique_id': '!2e9545b8',
      'version': 1,
    }),
    'errors': dict({
      'circuit_breaker_open': False,
      'dead_reason': None,
      'last_exception': None,
      'last_update_success': True,
      'missed_heartbeats': 0,
      'reconnect_attempts': 1,
      'short_connections': 0,
    }),
    'gateway': dict({
      'channels': list([
        dict({
          'downlink_enabled': False,
          'encrypted': True,
          'index': 0,
          'name': '',
          'role': 'PRIMARY',
          'uplink_enabled': False,
        }),
        dict({
          'downlink_enabled': False,
          'encrypted': True,
          'index': 1,
          'name': 'admin',
          'role': 'SECONDARY',
          'uplink_enabled': False,
        }),
      ]),
      'firmware_version': '2.7.26.54e0d8d',
      'hardware_model': 'TBEAM',
      'has_bluetooth': True,
      'has_wifi': True,
      'long_name': 'HA Gateway',
      'modem_preset': 'LONG_FAST',
      'node_id': '!2e9545b8',
      'node_num': 781534648,
      'nodedb_count': 3,
      'reboot_count': 7,
      'region': 'EU_868',
      'role': 'CLIENT',
      'short_name': 'HAGW',
    }),
    'nodes': dict({
      '!2e9545b8': dict({
        'channel': 0,
        'first_seen': '2025-09-08T02:57:10+00:00',
        'hardware_model': 'TBEAM',
        'has_public_key': True,
        'hops_away': 0,
        'is_favorite': True,
        'is_ignored': False,
        'is_key_manually_verified': False,
        'is_licensed': False,
        'is_muted': False,
        'is_unmessagable': None,
        'last_heard': '2025-09-08T03:05:00+00:00',
        'last_heard_device': 1757300700,
        'long_name': 'HA Gateway',
        'node_id': '!2e9545b8',
        'num': 781534648,
        'position': dict({
          'altitude': 38,
          'device_time': 1757300100,
          'ground_speed': None,
          'ground_track': None,
          'latitude': '**REDACTED**',
          'location_source': 'LOC_MANUAL',
          'longitude': '**REDACTED**',
          'precision_bits': None,
          'reported_at': '2025-09-08T02:57:10+00:00',
          'sats_in_view': None,
          'source': 'node_info',
        }),
        'presumptive': False,
        'role': 'CLIENT',
        'rssi': None,
        'short_name': 'HAGW',
        'snr': None,
        'telemetry': dict({
          'device': dict({
            'device_time': None,
            'family': 'device',
            'reported_at': '2025-09-08T02:57:10+00:00',
            'values': dict({
              'air_util_tx': 0.8,
              'battery_level': 101,
              'channel_utilization': 9.5,
              'uptime_seconds': 431,
              'voltage': 4.19,
            }),
          }),
        }),
        'via_mqtt': False,
      }),
      '!aabbccdd': dict({
        'channel': 0,
        'first_seen': '2025-09-08T02:57:10+00:00',
        'hardware_model': 'HELTEC_V3',
        'has_public_key': True,
        'hops_away': 1,
        'is_favorite': False,
        'is_ignored': False,
        'is_key_manually_verified': False,
        'is_licensed': False,
        'is_muted': False,
        'is_unmessagable': None,
        'last_heard': '2025-09-08T03:01:20+00:00',
        'last_heard_device': 1757300480,
        'long_name': 'Remote One',
        'node_id': '!aabbccdd',
        'num': 2864434397,
        'position': dict({
          'altitude': 42,
          'device_time': 1757300299,
          'ground_speed': None,
          'ground_track': None,
          'latitude': '**REDACTED**',
          'location_source': None,
          'longitude': '**REDACTED**',
          'precision_bits': None,
          'reported_at': '2025-09-08T02:57:10+00:00',
          'sats_in_view': None,
          'source': 'node_info',
        }),
        'presumptive': False,
        'role': 'ROUTER',
        'rssi': None,
        'short_name': 'RM1',
        'snr': 5.5,
        'telemetry': dict({
          'device': dict({
            'device_time': None,
            'family': 'device',
            'reported_at': '2025-09-08T02:57:10+00:00',
            'values': dict({
              'air_util_tx': 1.2,
              'battery_level': 55,
              'channel_utilization': 12.5,
              'uptime_seconds': 99912,
              'voltage': 3.81,
            }),
          }),
        }),
        'via_mqtt': False,
      }),
      '!deadbeef': dict({
        'channel': 0,
        'first_seen': '2025-09-08T02:57:10+00:00',
        'hardware_model': 'RAK4631',
        'has_public_key': False,
        'hops_away': 2,
        'is_favorite': False,
        'is_ignored': False,
        'is_key_manually_verified': False,
        'is_licensed': False,
        'is_muted': False,
        'is_unmessagable': None,
        'last_heard': '2025-09-08T03:00:20+00:00',
        'last_heard_device': 1757300420,
        'long_name': 'Weather Shed',
        'node_id': '!deadbeef',
        'num': 3735928559,
        'position': None,
        'presumptive': False,
        'role': 'SENSOR',
        'rssi': None,
        'short_name': 'WSHD',
        'snr': -2.5,
        'telemetry': dict({
          'environment': dict({
            'device_time': None,
            'family': 'environment',
            'reported_at': '2025-09-08T02:57:10+00:00',
            'values': dict({
              'barometric_pressure': 1013.25,
              'relative_humidity': 48.2,
              'temperature': 21.5,
            }),
          }),
        }),
        'via_mqtt': True,
      }),
    }),
  })
# ---
# name: test_device_diagnostics_gateway
  dict({
    'connection': dict({
      'circuit_breaker_open': False,
      'connected_for': 0.0,
      'dead_reason': None,
      'download_node_db': False,
      'host': '**REDACTED**',
      'missed_heartbeats': 0,
      'pending_requests': 0,
      'port': 4403,
      'reboot_grace_active': False,
      'reconnect_attempts': 1,
      'short_connections': 0,
      'state': 'connected',
    }),
    'gateway': dict({
      'channels': list([
        dict({
          'downlink_enabled': False,
          'encrypted': True,
          'index': 0,
          'name': '',
          'role': 'PRIMARY',
          'uplink_enabled': False,
        }),
        dict({
          'downlink_enabled': False,
          'encrypted': True,
          'index': 1,
          'name': 'admin',
          'role': 'SECONDARY',
          'uplink_enabled': False,
        }),
      ]),
      'firmware_version': '2.7.26.54e0d8d',
      'hardware_model': 'TBEAM',
      'has_bluetooth': True,
      'has_wifi': True,
      'long_name': 'HA Gateway',
      'modem_preset': 'LONG_FAST',
      'node_id': '!2e9545b8',
      'node_num': 781534648,
      'nodedb_count': 3,
      'reboot_count': 7,
      'region': 'EU_868',
      'role': 'CLIENT',
      'short_name': 'HAGW',
    }),
    'identifier': '!2e9545b8',
    'is_gateway': True,
    'node': dict({
      'channel': 0,
      'first_seen': '2025-09-08T02:57:10+00:00',
      'hardware_model': 'TBEAM',
      'has_public_key': True,
      'hops_away': 0,
      'is_favorite': True,
      'is_ignored': False,
      'is_key_manually_verified': False,
      'is_licensed': False,
      'is_muted': False,
      'is_unmessagable': None,
      'last_heard': '2025-09-08T03:05:00+00:00',
      'last_heard_device': 1757300700,
      'long_name': 'HA Gateway',
      'node_id': '!2e9545b8',
      'num': 781534648,
      'position': dict({
        'altitude': 38,
        'device_time': 1757300100,
        'ground_speed': None,
        'ground_track': None,
        'latitude': '**REDACTED**',
        'location_source': 'LOC_MANUAL',
        'longitude': '**REDACTED**',
        'precision_bits': None,
        'reported_at': '2025-09-08T02:57:10+00:00',
        'sats_in_view': None,
        'source': 'node_info',
      }),
      'presumptive': False,
      'role': 'CLIENT',
      'rssi': None,
      'short_name': 'HAGW',
      'snr': None,
      'telemetry': dict({
        'device': dict({
          'device_time': None,
          'family': 'device',
          'reported_at': '2025-09-08T02:57:10+00:00',
          'values': dict({
            'air_util_tx': 0.8,
            'battery_level': 101,
            'channel_utilization': 9.5,
            'uptime_seconds': 431,
            'voltage': 4.19,
          }),
        }),
      }),
      'via_mqtt': False,
    }),
  })
# ---
# name: test_device_diagnostics_node
  dict({
    'connection': None,
    'gateway': None,
    'identifier': '!2e9545b8_!aabbccdd',
    'is_gateway': False,
    'node': dict({
      'channel': 0,
      'first_seen': '2025-09-08T02:57:10+00:00',
      'hardware_model': 'HELTEC_V3',
      'has_public_key': True,
      'hops_away': 1,
      'is_favorite': False,
      'is_ignored': False,
      'is_key_manually_verified': False,
      'is_licensed': False,
      'is_muted': False,
      'is_unmessagable': None,
      'last_heard': '2025-09-08T03:01:20+00:00',
      'last_heard_device': 1757300480,
      'long_name': 'Remote One',
      'node_id': '!aabbccdd',
      'num': 2864434397,
      'position': dict({
        'altitude': 42,
        'device_time': 1757300299,
        'ground_speed': None,
        'ground_track': None,
        'latitude': '**REDACTED**',
        'location_source': None,
        'longitude': '**REDACTED**',
        'precision_bits': None,
        'reported_at': '2025-09-08T02:57:10+00:00',
        'sats_in_view': None,
        'source': 'node_info',
      }),
      'presumptive': False,
      'role': 'ROUTER',
      'rssi': None,
      'short_name': 'RM1',
      'snr': 5.5,
      'telemetry': dict({
        'device': dict({
          'device_time': None,
          'family': 'device',
          'reported_at': '2025-09-08T02:57:10+00:00',
          'values': dict({
            'air_util_tx': 1.2,
            'battery_level': 55,
            'channel_utilization': 12.5,
            'uptime_seconds': 99912,
            'voltage': 3.81,
          }),
        }),
      }),
      'via_mqtt': False,
    }),
  })
# ---
